@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,14 @@
 
 package org.springframework.boot.actuate.autoconfigure.info;
 
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.condition.ConditionalOnAvailableEndpoint;
 import org.springframework.boot.actuate.info.InfoContributor;
 import org.springframework.boot.actuate.info.InfoEndpoint;
-import org.springframework.boot.autoconfigure.AutoConfigureAfter;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
 
 /**
  * {@link EnableAutoConfiguration Auto-configuration} for the {@link InfoEndpoint}.
@@ -34,15 +31,14 @@ import org.springframework.context.annotation.Configuration;
  * @author Phillip Webb
  * @since 2.0.0
  */
-@Configuration(proxyBeanMethods = false)
+@AutoConfiguration(after = InfoContributorAutoConfiguration.class)
 @ConditionalOnAvailableEndpoint(endpoint = InfoEndpoint.class)
-@AutoConfigureAfter(InfoContributorAutoConfiguration.class)
 public class InfoEndpointAutoConfiguration {
 
 	@Bean
 	@ConditionalOnMissingBean
 	public InfoEndpoint infoEndpoint(ObjectProvider<InfoContributor> infoContributors) {
-		return new InfoEndpoint(infoContributors.orderedStream().collect(Collectors.toList()));
+		return new InfoEndpoint(infoContributors.orderedStream().toList());
 	}
 
 }
