@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,17 +23,19 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import javax.servlet.Servlet;
+import jakarta.servlet.Servlet;
 
+import org.springframework.aot.hint.BindingReflectionHintsRegistrar;
+import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.RuntimeHintsRegistrar;
 import org.springframework.boot.actuate.web.mappings.HandlerMethodDescription;
 import org.springframework.boot.actuate.web.mappings.MappingDescriptionProvider;
+import org.springframework.boot.actuate.web.mappings.servlet.DispatcherServletsMappingDescriptionProvider.DispatcherServletsMappingDescriptionProviderRuntimeHints;
 import org.springframework.boot.web.servlet.ServletRegistrationBean;
 import org.springframework.context.ApplicationContext;
-import org.springframework.data.rest.webmvc.support.DelegatingHandlerMapping;
-import org.springframework.util.ClassUtils;
+import org.springframework.context.annotation.ImportRuntimeHints;
 import org.springframework.web.context.WebApplicationContext;
 import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.servlet.DispatcherServlet;
@@ -51,17 +53,16 @@ import org.springframework.web.servlet.mvc.method.RequestMappingInfoHandlerMappi
  * @author Stephane Nicoll
  * @since 2.0.0
  */
+@ImportRuntimeHints(DispatcherServletsMappingDescriptionProviderRuntimeHints.class)
 public class DispatcherServletsMappingDescriptionProvider implements MappingDescriptionProvider {
 
-	private static final List<HandlerMappingDescriptionProvider<? extends HandlerMapping>> descriptionProviders;
+	private static final List<HandlerMappingDescriptionProvider<?>> descriptionProviders;
 
 	static {
-		List<HandlerMappingDescriptionProvider<? extends HandlerMapping>> providers = new ArrayList<>();
+		List<HandlerMappingDescriptionProvider<?>> providers = new ArrayList<>();
 		providers.add(new RequestMappingInfoHandlerMappingDescriptionProvider());
 		providers.add(new UrlHandlerMappingDescriptionProvider());
-		if (ClassUtils.isPresent("org.springframework.data.rest.webmvc.support.DelegatingHandlerMapping", null)) {
-			providers.add(new DelegatingHandlerMappingDescriptionProvider(new ArrayList<>(providers)));
-		}
+		providers.add(new IterableDelegatesHandlerMappingDescriptionProvider(new ArrayList<>(providers)));
 		descriptionProviders = Collections.unmodifiableList(providers);
 	}
 
@@ -72,8 +73,8 @@ public class DispatcherServletsMappingDescriptionProvider implements MappingDesc
 
 	@Override
 	public Map<String, List<DispatcherServletMappingDescription>> describeMappings(ApplicationContext context) {
-		if (context instanceof WebApplicationContext) {
-			return describeMappings((WebApplicationContext) context);
+		if (context instanceof WebApplicationContext webApplicationContext) {
+			return describeMappings(webApplicationContext);
 		}
 		return Collections.emptyMap();
 	}
@@ -102,15 +103,15 @@ public class DispatcherServletsMappingDescriptionProvider implements MappingDesc
 	}
 
 	private List<DispatcherServletMappingDescription> describeMappings(DispatcherServletHandlerMappings mappings) {
-		return mappings.getHandlerMappings().stream().flatMap(this::describe).collect(Collectors.toList());
+		return mappings.getHandlerMappings().stream().flatMap(this::describe).toList();
 	}
 
-	private <T extends HandlerMapping> Stream<DispatcherServletMappingDescription> describe(T handlerMapping) {
+	private <T> Stream<DispatcherServletMappingDescription> describe(T handlerMapping) {
 		return describe(handlerMapping, descriptionProviders).stream();
 	}
 
 	@SuppressWarnings("unchecked")
-	private static <T extends HandlerMapping> List<DispatcherServletMappingDescription> describe(T handlerMapping,
+	private static <T> List<DispatcherServletMappingDescription> describe(T handlerMapping,
 			List<HandlerMappingDescriptionProvider<?>> descriptionProviders) {
 		for (HandlerMappingDescriptionProvider<?> descriptionProvider : descriptionProviders) {
 			if (descriptionProvider.getMappingClass().isInstance(handlerMapping)) {
@@ -120,7 +121,7 @@ public class DispatcherServletsMappingDescriptionProvider implements MappingDesc
 		return Collections.emptyList();
 	}
 
-	private interface HandlerMappingDescriptionProvider<T extends HandlerMapping> {
+	private interface HandlerMappingDescriptionProvider<T> {
 
 		Class<T> getMappingClass();
 
@@ -139,7 +140,7 @@ public class DispatcherServletsMappingDescriptionProvider implements MappingDesc
 		@Override
 		public List<DispatcherServletMappingDescription> describe(RequestMappingInfoHandlerMapping handlerMapping) {
 			Map<RequestMappingInfo, HandlerMethod> handlerMethods = handlerMapping.getHandlerMethods();
-			return handlerMethods.entrySet().stream().map(this::describe).collect(Collectors.toList());
+			return handlerMethods.entrySet().stream().map(this::describe).toList();
 		}
 
 		private DispatcherServletMappingDescription describe(Entry<RequestMappingInfo, HandlerMethod> mapping) {
@@ -162,7 +163,7 @@ public class DispatcherServletsMappingDescriptionProvider implements MappingDesc
 
 		@Override
 		public List<DispatcherServletMappingDescription> describe(AbstractUrlHandlerMapping handlerMapping) {
-			return handlerMapping.getHandlerMap().entrySet().stream().map(this::describe).collect(Collectors.toList());
+			return handlerMapping.getHandlerMap().entrySet().stream().map(this::describe).toList();
 		}
 
 		private DispatcherServletMappingDescription describe(Entry<String, Object> mapping) {
@@ -171,29 +172,42 @@ public class DispatcherServletsMappingDescriptionProvider implements MappingDesc
 
 	}
 
-	private static final class DelegatingHandlerMappingDescriptionProvider
-			implements HandlerMappingDescriptionProvider<DelegatingHandlerMapping> {
+	@SuppressWarnings("rawtypes")
+	private static final class IterableDelegatesHandlerMappingDescriptionProvider
+			implements HandlerMappingDescriptionProvider<Iterable> {
 
 		private final List<HandlerMappingDescriptionProvider<?>> descriptionProviders;
 
-		private DelegatingHandlerMappingDescriptionProvider(
+		private IterableDelegatesHandlerMappingDescriptionProvider(
 				List<HandlerMappingDescriptionProvider<?>> descriptionProviders) {
 			this.descriptionProviders = descriptionProviders;
 		}
 
 		@Override
-		public Class<DelegatingHandlerMapping> getMappingClass() {
-			return DelegatingHandlerMapping.class;
+		public Class<Iterable> getMappingClass() {
+			return Iterable.class;
 		}
 
 		@Override
-		public List<DispatcherServletMappingDescription> describe(DelegatingHandlerMapping handlerMapping) {
+		public List<DispatcherServletMappingDescription> describe(Iterable handlerMapping) {
 			List<DispatcherServletMappingDescription> descriptions = new ArrayList<>();
-			for (HandlerMapping delegate : handlerMapping.getDelegates()) {
-				descriptions.addAll(
-						DispatcherServletsMappingDescriptionProvider.describe(delegate, this.descriptionProviders));
+			for (Object delegate : handlerMapping) {
+				descriptions
+					.addAll(DispatcherServletsMappingDescriptionProvider.describe(delegate, this.descriptionProviders));
 			}
 			return descriptions;
+		}
+
+	}
+
+	static class DispatcherServletsMappingDescriptionProviderRuntimeHints implements RuntimeHintsRegistrar {
+
+		private final BindingReflectionHintsRegistrar bindingRegistrar = new BindingReflectionHintsRegistrar();
+
+		@Override
+		public void registerHints(RuntimeHints hints, ClassLoader classLoader) {
+			this.bindingRegistrar.registerReflectionHints(hints.reflection(),
+					DispatcherServletMappingDescription.class);
 		}
 
 	}
