@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,27 +20,32 @@ import java.io.InputStream;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
 import java.security.interfaces.RSAPrivateKey;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
 
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
-import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.Identityprovider.Verification;
+import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.AssertingParty;
+import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.AssertingParty.Verification;
+import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.Decryption;
 import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.Registration;
 import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.Registration.Signing;
+import org.springframework.boot.context.properties.PropertyMapper;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.io.Resource;
 import org.springframework.security.converter.RsaKeyConverters;
-import org.springframework.security.saml2.credentials.Saml2X509Credential;
-import org.springframework.security.saml2.credentials.Saml2X509Credential.Saml2X509CredentialType;
+import org.springframework.security.saml2.core.Saml2X509Credential;
+import org.springframework.security.saml2.core.Saml2X509Credential.Saml2X509CredentialType;
 import org.springframework.security.saml2.provider.service.registration.InMemoryRelyingPartyRegistrationRepository;
 import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistration;
+import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistration.AssertingPartyDetails;
+import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistration.Builder;
 import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistrationRepository;
-import org.springframework.security.saml2.provider.service.servlet.filter.Saml2WebSsoAuthenticationFilter;
+import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistrations;
 import org.springframework.util.Assert;
+import org.springframework.util.StringUtils;
 
 /**
  * {@link Configuration @Configuration} used to map {@link Saml2RelyingPartyProperties} to
@@ -48,6 +53,7 @@ import org.springframework.util.Assert;
  *
  * @author Madhura Bhave
  * @author Phillip Webb
+ * @author Moritz Halbritter
  */
 @Configuration(proxyBeanMethods = false)
 @Conditional(RegistrationConfiguredCondition.class)
@@ -56,8 +62,11 @@ class Saml2RelyingPartyRegistrationConfiguration {
 
 	@Bean
 	RelyingPartyRegistrationRepository relyingPartyRegistrationRepository(Saml2RelyingPartyProperties properties) {
-		List<RelyingPartyRegistration> registrations = properties.getRegistration().entrySet().stream()
-				.map(this::asRegistration).collect(Collectors.toList());
+		List<RelyingPartyRegistration> registrations = properties.getRegistration()
+			.entrySet()
+			.stream()
+			.map(this::asRegistration)
+			.toList();
 		return new InMemoryRelyingPartyRegistrationRepository(registrations);
 	}
 
@@ -66,39 +75,85 @@ class Saml2RelyingPartyRegistrationConfiguration {
 	}
 
 	private RelyingPartyRegistration asRegistration(String id, Registration properties) {
-		RelyingPartyRegistration.Builder builder = RelyingPartyRegistration.withRegistrationId(id);
-		builder.assertionConsumerServiceUrlTemplate(
-				"{baseUrl}" + Saml2WebSsoAuthenticationFilter.DEFAULT_FILTER_PROCESSES_URI);
-		builder.idpWebSsoUrl(properties.getIdentityprovider().getSsoUrl());
-		builder.remoteIdpEntityId(properties.getIdentityprovider().getEntityId());
-		builder.credentials((credentials) -> credentials.addAll(asCredentials(properties)));
-		return builder.build();
+		boolean usingMetadata = StringUtils.hasText(properties.getAssertingparty().getMetadataUri());
+		Builder builder = (usingMetadata)
+				? RelyingPartyRegistrations.fromMetadataLocation(properties.getAssertingparty().getMetadataUri())
+					.registrationId(id)
+				: RelyingPartyRegistration.withRegistrationId(id);
+		builder.assertionConsumerServiceLocation(properties.getAcs().getLocation());
+		builder.assertionConsumerServiceBinding(properties.getAcs().getBinding());
+		builder.assertingPartyDetails(mapAssertingParty(properties.getAssertingparty(), usingMetadata));
+		builder.signingX509Credentials((credentials) -> properties.getSigning()
+			.getCredentials()
+			.stream()
+			.map(this::asSigningCredential)
+			.forEach(credentials::add));
+		builder.decryptionX509Credentials((credentials) -> properties.getDecryption()
+			.getCredentials()
+			.stream()
+			.map(this::asDecryptionCredential)
+			.forEach(credentials::add));
+		builder.assertingPartyDetails(
+				(details) -> details.verificationX509Credentials((credentials) -> properties.getAssertingparty()
+					.getVerification()
+					.getCredentials()
+					.stream()
+					.map(this::asVerificationCredential)
+					.forEach(credentials::add)));
+		builder.singleLogoutServiceLocation(properties.getSinglelogout().getUrl());
+		builder.singleLogoutServiceResponseLocation(properties.getSinglelogout().getResponseUrl());
+		builder.singleLogoutServiceBinding(properties.getSinglelogout().getBinding());
+		builder.entityId(properties.getEntityId());
+		RelyingPartyRegistration registration = builder.build();
+		boolean signRequest = registration.getAssertingPartyDetails().getWantAuthnRequestsSigned();
+		validateSigningCredentials(properties, signRequest);
+		return registration;
 	}
 
-	private List<Saml2X509Credential> asCredentials(Registration properties) {
-		List<Saml2X509Credential> credentials = new ArrayList<>();
-		properties.getSigning().getCredentials().stream().map(this::asSigningCredential).forEach(credentials::add);
-		properties.getIdentityprovider().getVerification().getCredentials().stream().map(this::asVerificationCredential)
-				.forEach(credentials::add);
-		return credentials;
+	private Consumer<AssertingPartyDetails.Builder> mapAssertingParty(AssertingParty assertingParty,
+			boolean usingMetadata) {
+		return (details) -> {
+			PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
+			map.from(assertingParty::getEntityId).to(details::entityId);
+			map.from(assertingParty.getSinglesignon()::getBinding).to(details::singleSignOnServiceBinding);
+			map.from(assertingParty.getSinglesignon()::getUrl).to(details::singleSignOnServiceLocation);
+			map.from(assertingParty.getSinglesignon()::isSignRequest)
+				.when((signRequest) -> !usingMetadata)
+				.to(details::wantAuthnRequestsSigned);
+			map.from(assertingParty.getSinglelogout()::getUrl).to(details::singleLogoutServiceLocation);
+			map.from(assertingParty.getSinglelogout()::getResponseUrl).to(details::singleLogoutServiceResponseLocation);
+			map.from(assertingParty.getSinglelogout()::getBinding).to(details::singleLogoutServiceBinding);
+		};
+	}
+
+	private void validateSigningCredentials(Registration properties, boolean signRequest) {
+		if (signRequest) {
+			Assert.state(!properties.getSigning().getCredentials().isEmpty(),
+					"Signing credentials must not be empty when authentication requests require signing.");
+		}
 	}
 
 	private Saml2X509Credential asSigningCredential(Signing.Credential properties) {
 		RSAPrivateKey privateKey = readPrivateKey(properties.getPrivateKeyLocation());
 		X509Certificate certificate = readCertificate(properties.getCertificateLocation());
-		return new Saml2X509Credential(privateKey, certificate, Saml2X509CredentialType.SIGNING,
-				Saml2X509CredentialType.DECRYPTION);
+		return new Saml2X509Credential(privateKey, certificate, Saml2X509CredentialType.SIGNING);
+	}
+
+	private Saml2X509Credential asDecryptionCredential(Decryption.Credential properties) {
+		RSAPrivateKey privateKey = readPrivateKey(properties.getPrivateKeyLocation());
+		X509Certificate certificate = readCertificate(properties.getCertificateLocation());
+		return new Saml2X509Credential(privateKey, certificate, Saml2X509CredentialType.DECRYPTION);
 	}
 
 	private Saml2X509Credential asVerificationCredential(Verification.Credential properties) {
 		X509Certificate certificate = readCertificate(properties.getCertificateLocation());
-		return new Saml2X509Credential(certificate, Saml2X509CredentialType.ENCRYPTION,
-				Saml2X509CredentialType.VERIFICATION);
+		return new Saml2X509Credential(certificate, Saml2X509Credential.Saml2X509CredentialType.ENCRYPTION,
+				Saml2X509Credential.Saml2X509CredentialType.VERIFICATION);
 	}
 
 	private RSAPrivateKey readPrivateKey(Resource location) {
 		Assert.state(location != null, "No private key location specified");
-		Assert.state(location.exists(), "Private key location '" + location + "' does not exist");
+		Assert.state(location.exists(), () -> "Private key location '" + location + "' does not exist");
 		try (InputStream inputStream = location.getInputStream()) {
 			return RsaKeyConverters.pkcs8().convert(inputStream);
 		}
@@ -109,7 +164,7 @@ class Saml2RelyingPartyRegistrationConfiguration {
 
 	private X509Certificate readCertificate(Resource location) {
 		Assert.state(location != null, "No certificate location specified");
-		Assert.state(location.exists(), "Certificate  location '" + location + "' does not exist");
+		Assert.state(location.exists(), () -> "Certificate  location '" + location + "' does not exist");
 		try (InputStream inputStream = location.getInputStream()) {
 			return (X509Certificate) CertificateFactory.getInstance("X.509").generateCertificate(inputStream);
 		}
