@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,10 +18,13 @@ package org.springframework.boot.autoconfigure.web.embedded;
 
 import java.io.File;
 import java.io.IOException;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.SynchronousQueue;
+import java.util.function.Function;
 
 import org.eclipse.jetty.server.AbstractConnector;
 import org.eclipse.jetty.server.Connector;
@@ -30,23 +33,31 @@ import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConfiguration.ConnectionFactory;
 import org.eclipse.jetty.server.RequestLog;
 import org.eclipse.jetty.server.RequestLogWriter;
+import org.eclipse.jetty.server.Server;
+import org.eclipse.jetty.util.BlockingArrayQueue;
 import org.eclipse.jetty.util.thread.QueuedThreadPool;
+import org.eclipse.jetty.util.thread.ThreadPool;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.boot.autoconfigure.web.ServerProperties;
+import org.springframework.boot.autoconfigure.web.ServerProperties.ForwardHeadersStrategy;
+import org.springframework.boot.autoconfigure.web.ServerProperties.Jetty;
 import org.springframework.boot.context.properties.bind.Bindable;
 import org.springframework.boot.context.properties.bind.Binder;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySources;
+import org.springframework.boot.testsupport.web.servlet.DirtiesUrlFactories;
+import org.springframework.boot.testsupport.web.servlet.Servlet5ClassPathOverrides;
 import org.springframework.boot.web.embedded.jetty.ConfigurableJettyWebServerFactory;
 import org.springframework.boot.web.embedded.jetty.JettyServletWebServerFactory;
 import org.springframework.boot.web.embedded.jetty.JettyWebServer;
 import org.springframework.mock.env.MockEnvironment;
 import org.springframework.test.context.support.TestPropertySourceUtils;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 
 /**
  * Tests for {@link JettyWebServerFactoryCustomizer}.
@@ -55,6 +66,8 @@ import static org.mockito.Mockito.verify;
  * @author Phillip Webb
  * @author HaiTao Zhang
  */
+@DirtiesUrlFactories
+@Servlet5ClassPathOverrides
 class JettyWebServerFactoryCustomizerTests {
 
 	private MockEnvironment environment;
@@ -76,14 +89,14 @@ class JettyWebServerFactoryCustomizerTests {
 		this.environment.setProperty("DYNO", "-");
 		ConfigurableJettyWebServerFactory factory = mock(ConfigurableJettyWebServerFactory.class);
 		this.customizer.customize(factory);
-		verify(factory).setUseForwardHeaders(true);
+		then(factory).should().setUseForwardHeaders(true);
 	}
 
 	@Test
 	void defaultUseForwardHeaders() {
 		ConfigurableJettyWebServerFactory factory = mock(ConfigurableJettyWebServerFactory.class);
 		this.customizer.customize(factory);
-		verify(factory).setUseForwardHeaders(false);
+		then(factory).should().setUseForwardHeaders(false);
 	}
 
 	@Test
@@ -91,7 +104,7 @@ class JettyWebServerFactoryCustomizerTests {
 		this.serverProperties.setForwardHeadersStrategy(ServerProperties.ForwardHeadersStrategy.NATIVE);
 		ConfigurableJettyWebServerFactory factory = mock(ConfigurableJettyWebServerFactory.class);
 		this.customizer.customize(factory);
-		verify(factory).setUseForwardHeaders(true);
+		then(factory).should().setUseForwardHeaders(true);
 	}
 
 	@Test
@@ -100,7 +113,7 @@ class JettyWebServerFactoryCustomizerTests {
 		this.serverProperties.setForwardHeadersStrategy(ServerProperties.ForwardHeadersStrategy.NONE);
 		ConfigurableJettyWebServerFactory factory = mock(ConfigurableJettyWebServerFactory.class);
 		this.customizer.customize(factory);
-		verify(factory).setUseForwardHeaders(false);
+		then(factory).should().setUseForwardHeaders(false);
 	}
 
 	@Test
@@ -135,27 +148,99 @@ class JettyWebServerFactoryCustomizerTests {
 	}
 
 	@Test
-	void maxThreadsCanBeCustomized() {
-		bind("server.jetty.max-threads=100");
+	void threadPoolMatchesJettyDefaults() {
+		ThreadPool defaultThreadPool = new Server(0).getThreadPool();
+		ThreadPool configuredThreadPool = customizeAndGetServer().getServer().getThreadPool();
+		assertThat(defaultThreadPool).isInstanceOf(QueuedThreadPool.class);
+		assertThat(configuredThreadPool).isInstanceOf(QueuedThreadPool.class);
+		QueuedThreadPool defaultQueuedThreadPool = (QueuedThreadPool) defaultThreadPool;
+		QueuedThreadPool configuredQueuedThreadPool = (QueuedThreadPool) configuredThreadPool;
+		assertThat(configuredQueuedThreadPool.getMinThreads()).isEqualTo(defaultQueuedThreadPool.getMinThreads());
+		assertThat(configuredQueuedThreadPool.getMaxThreads()).isEqualTo(defaultQueuedThreadPool.getMaxThreads());
+		assertThat(configuredQueuedThreadPool.getIdleTimeout()).isEqualTo(defaultQueuedThreadPool.getIdleTimeout());
+		BlockingQueue<?> defaultQueue = getQueue(defaultThreadPool);
+		BlockingQueue<?> configuredQueue = getQueue(configuredThreadPool);
+		assertThat(defaultQueue).isInstanceOf(BlockingArrayQueue.class);
+		assertThat(configuredQueue).isInstanceOf(BlockingArrayQueue.class);
+		assertThat(((BlockingArrayQueue<?>) defaultQueue).getMaxCapacity())
+			.isEqualTo(((BlockingArrayQueue<?>) configuredQueue).getMaxCapacity());
+	}
+
+	@Test
+	void threadPoolMaxThreadsCanBeCustomized() {
+		bind("server.jetty.threads.max=100");
 		JettyWebServer server = customizeAndGetServer();
 		QueuedThreadPool threadPool = (QueuedThreadPool) server.getServer().getThreadPool();
 		assertThat(threadPool.getMaxThreads()).isEqualTo(100);
 	}
 
 	@Test
-	void minThreadsCanBeCustomized() {
-		bind("server.jetty.min-threads=100");
+	void threadPoolMinThreadsCanBeCustomized() {
+		bind("server.jetty.threads.min=100");
 		JettyWebServer server = customizeAndGetServer();
 		QueuedThreadPool threadPool = (QueuedThreadPool) server.getServer().getThreadPool();
 		assertThat(threadPool.getMinThreads()).isEqualTo(100);
 	}
 
 	@Test
-	void threadIdleTimeoutCanBeCustomized() {
-		bind("server.jetty.thread-idle-timeout=100s");
+	void threadPoolIdleTimeoutCanBeCustomized() {
+		bind("server.jetty.threads.idle-timeout=100s");
 		JettyWebServer server = customizeAndGetServer();
 		QueuedThreadPool threadPool = (QueuedThreadPool) server.getServer().getThreadPool();
 		assertThat(threadPool.getIdleTimeout()).isEqualTo(100000);
+	}
+
+	@Test
+	void threadPoolWithMaxQueueCapacityEqualToZeroCreateSynchronousQueue() {
+		bind("server.jetty.threads.max-queue-capacity=0");
+		JettyWebServer server = customizeAndGetServer();
+		ThreadPool threadPool = server.getServer().getThreadPool();
+		BlockingQueue<?> queue = getQueue(threadPool);
+		assertThat(queue).isInstanceOf(SynchronousQueue.class);
+		assertDefaultThreadPoolSettings(threadPool);
+	}
+
+	@Test
+	void threadPoolWithMaxQueueCapacityEqualToZeroCustomizesThreadPool() {
+		bind("server.jetty.threads.max-queue-capacity=0", "server.jetty.threads.min=100",
+				"server.jetty.threads.max=100", "server.jetty.threads.idle-timeout=6s");
+		JettyWebServer server = customizeAndGetServer();
+		QueuedThreadPool threadPool = (QueuedThreadPool) server.getServer().getThreadPool();
+		assertThat(threadPool.getMinThreads()).isEqualTo(100);
+		assertThat(threadPool.getMaxThreads()).isEqualTo(100);
+		assertThat(threadPool.getIdleTimeout()).isEqualTo(Duration.ofSeconds(6).toMillis());
+	}
+
+	@Test
+	void threadPoolWithMaxQueueCapacityPositiveCreateBlockingArrayQueue() {
+		bind("server.jetty.threads.max-queue-capacity=1234");
+		JettyWebServer server = customizeAndGetServer();
+		ThreadPool threadPool = server.getServer().getThreadPool();
+		BlockingQueue<?> queue = getQueue(threadPool);
+		assertThat(queue).isInstanceOf(BlockingArrayQueue.class);
+		assertThat(((BlockingArrayQueue<?>) queue).getMaxCapacity()).isEqualTo(1234);
+		assertDefaultThreadPoolSettings(threadPool);
+	}
+
+	@Test
+	void threadPoolWithMaxQueueCapacityPositiveCustomizesThreadPool() {
+		bind("server.jetty.threads.max-queue-capacity=1234", "server.jetty.threads.min=10",
+				"server.jetty.threads.max=150", "server.jetty.threads.idle-timeout=3s");
+		JettyWebServer server = customizeAndGetServer();
+		QueuedThreadPool threadPool = (QueuedThreadPool) server.getServer().getThreadPool();
+		assertThat(threadPool.getMinThreads()).isEqualTo(10);
+		assertThat(threadPool.getMaxThreads()).isEqualTo(150);
+		assertThat(threadPool.getIdleTimeout()).isEqualTo(Duration.ofSeconds(3).toMillis());
+	}
+
+	private void assertDefaultThreadPoolSettings(ThreadPool threadPool) {
+		assertThat(threadPool).isInstanceOf(QueuedThreadPool.class);
+		QueuedThreadPool queuedThreadPool = (QueuedThreadPool) threadPool;
+		Jetty defaultProperties = new Jetty();
+		assertThat(queuedThreadPool.getMinThreads()).isEqualTo(defaultProperties.getThreads().getMin());
+		assertThat(queuedThreadPool.getMaxThreads()).isEqualTo(defaultProperties.getThreads().getMax());
+		assertThat(queuedThreadPool.getIdleTimeout())
+			.isEqualTo(defaultProperties.getThreads().getIdleTimeout().toMillis());
 	}
 
 	private CustomRequestLog getRequestLog(JettyWebServer server) {
@@ -172,10 +257,10 @@ class JettyWebServerFactoryCustomizerTests {
 
 	@Test
 	void setUseForwardHeaders() {
-		this.serverProperties.setUseForwardHeaders(true);
+		this.serverProperties.setForwardHeadersStrategy(ForwardHeadersStrategy.NATIVE);
 		ConfigurableJettyWebServerFactory factory = mock(ConfigurableJettyWebServerFactory.class);
 		this.customizer.customize(factory);
-		verify(factory).setUseForwardHeaders(true);
+		then(factory).should().setUseForwardHeaders(true);
 	}
 
 	@Test
@@ -203,6 +288,61 @@ class JettyWebServerFactoryCustomizerTests {
 	}
 
 	@Test
+	void customizeMaxRequestHttpHeaderSize() {
+		bind("server.max-http-request-header-size=2048");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
+		assertThat(requestHeaderSizes).containsOnly(2048);
+	}
+
+	@Test
+	void customMaxHttpRequestHeaderSizeIgnoredIfNegative() {
+		bind("server.max-http-request-header-size=-1");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
+		assertThat(requestHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customMaxHttpRequestHeaderSizeIgnoredIfZero() {
+		bind("server.max-http-request-header-size=0");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
+		assertThat(requestHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void defaultMaxHttpResponseHeaderSize() {
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customizeMaxHttpResponseHeaderSize() {
+		bind("server.jetty.max-http-response-header-size=2KB");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(2048);
+	}
+
+	@Test
+	void customMaxHttpResponseHeaderSizeIgnoredIfNegative() {
+		bind("server.jetty.max-http-response-header-size=-1");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customMaxHttpResponseHeaderSizeIgnoredIfZero() {
+		bind("server.jetty.max-http-response-header-size=0");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
 	void customIdleTimeout() {
 		bind("server.jetty.connection-idle-timeout=60s");
 		JettyWebServer server = customizeAndGetServer();
@@ -215,25 +355,40 @@ class JettyWebServerFactoryCustomizerTests {
 		server.start();
 		server.stop();
 		return Arrays.stream(server.getServer().getConnectors())
-				.filter((connector) -> connector instanceof AbstractConnector).map(Connector::getIdleTimeout)
-				.collect(Collectors.toList());
+			.filter((connector) -> connector instanceof AbstractConnector)
+			.map(Connector::getIdleTimeout)
+			.toList();
 	}
 
 	private List<Integer> getRequestHeaderSizes(JettyWebServer server) {
+		return getHeaderSizes(server, HttpConfiguration::getRequestHeaderSize);
+	}
+
+	private List<Integer> getResponseHeaderSizes(JettyWebServer server) {
+		return getHeaderSizes(server, HttpConfiguration::getResponseHeaderSize);
+	}
+
+	private List<Integer> getHeaderSizes(JettyWebServer server, Function<HttpConfiguration, Integer> provider) {
 		List<Integer> requestHeaderSizes = new ArrayList<>();
 		// Start (and directly stop) server to have connectors available
 		server.start();
 		server.stop();
 		Connector[] connectors = server.getServer().getConnectors();
 		for (Connector connector : connectors) {
-			connector.getConnectionFactories().stream().filter((factory) -> factory instanceof ConnectionFactory)
-					.forEach((cf) -> {
-						ConnectionFactory factory = (ConnectionFactory) cf;
-						HttpConfiguration configuration = factory.getHttpConfiguration();
-						requestHeaderSizes.add(configuration.getRequestHeaderSize());
-					});
+			connector.getConnectionFactories()
+				.stream()
+				.filter((factory) -> factory instanceof ConnectionFactory)
+				.forEach((cf) -> {
+					ConnectionFactory factory = (ConnectionFactory) cf;
+					HttpConfiguration configuration = factory.getHttpConfiguration();
+					requestHeaderSizes.add(provider.apply(configuration));
+				});
 		}
 		return requestHeaderSizes;
+	}
+
+	private BlockingQueue<?> getQueue(ThreadPool threadPool) {
+		return ReflectionTestUtils.invokeMethod(threadPool, "getQueue");
 	}
 
 	private void bind(String... inlinedProperties) {
