@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,10 +17,9 @@
 package org.springframework.boot.test.autoconfigure.web.reactive;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.boot.autoconfigure.AutoConfigureAfter;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
@@ -32,7 +31,6 @@ import org.springframework.boot.test.web.reactive.server.WebTestClientBuilderCus
 import org.springframework.boot.web.codec.CodecCustomizer;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
 import org.springframework.test.web.reactive.server.MockServerConfigurer;
 import org.springframework.test.web.reactive.server.WebTestClient;
@@ -46,9 +44,8 @@ import org.springframework.web.server.WebHandler;
  * @author Andy Wilkinson
  * @since 2.0.0
  */
-@Configuration(proxyBeanMethods = false)
+@AutoConfiguration(after = { CodecsAutoConfiguration.class, WebFluxAutoConfiguration.class })
 @ConditionalOnClass({ WebClient.class, WebTestClient.class })
-@AutoConfigureAfter({ CodecsAutoConfiguration.class, WebFluxAutoConfiguration.class })
 @Import(WebTestClientSecurityConfiguration.class)
 @EnableConfigurationProperties
 public class WebTestClientAutoConfiguration {
@@ -73,8 +70,7 @@ public class WebTestClientAutoConfiguration {
 	@ConfigurationProperties(prefix = "spring.test.webtestclient")
 	public SpringBootWebTestClientBuilderCustomizer springBootWebTestClientBuilderCustomizer(
 			ObjectProvider<CodecCustomizer> codecCustomizers) {
-		return new SpringBootWebTestClientBuilderCustomizer(
-				codecCustomizers.orderedStream().collect(Collectors.toList()));
+		return new SpringBootWebTestClientBuilderCustomizer(codecCustomizers.orderedStream().toList());
 	}
 
 }
