@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.configurationprocessor.json.JSONArray;
 import org.springframework.boot.configurationprocessor.json.JSONObject;
@@ -39,8 +38,11 @@ class JsonConverter {
 
 	JSONArray toJsonArray(ConfigurationMetadata metadata, ItemType itemType) throws Exception {
 		JSONArray jsonArray = new JSONArray();
-		List<ItemMetadata> items = metadata.getItems().stream().filter((item) -> item.isOfItemType(itemType))
-				.sorted(ITEM_COMPARATOR).collect(Collectors.toList());
+		List<ItemMetadata> items = metadata.getItems()
+			.stream()
+			.filter((item) -> item.isOfItemType(itemType))
+			.sorted(ITEM_COMPARATOR)
+			.toList();
 		for (ItemMetadata item : items) {
 			if (item.isOfItemType(itemType)) {
 				jsonArray.put(toJsonObject(item));
@@ -160,29 +162,22 @@ class JsonConverter {
 
 	private static class ItemMetadataComparator implements Comparator<ItemMetadata> {
 
+		private static final Comparator<ItemMetadata> GROUP = Comparator.comparing(ItemMetadata::getName)
+			.thenComparing(ItemMetadata::getSourceType, Comparator.nullsFirst(Comparator.naturalOrder()));
+
+		private static final Comparator<ItemMetadata> ITEM = Comparator.comparing(ItemMetadataComparator::isDeprecated)
+			.thenComparing(ItemMetadata::getName)
+			.thenComparing(ItemMetadata::getSourceType, Comparator.nullsFirst(Comparator.naturalOrder()));
+
 		@Override
 		public int compare(ItemMetadata o1, ItemMetadata o2) {
 			if (o1.isOfItemType(ItemType.GROUP)) {
-				return compareGroup(o1, o2);
+				return GROUP.compare(o1, o2);
 			}
-			return compareProperty(o1, o2);
+			return ITEM.compare(o1, o2);
 		}
 
-		private int compareGroup(ItemMetadata o1, ItemMetadata o2) {
-			return o1.getName().compareTo(o2.getName());
-		}
-
-		private int compareProperty(ItemMetadata o1, ItemMetadata o2) {
-			if (isDeprecated(o1) && !isDeprecated(o2)) {
-				return 1;
-			}
-			if (isDeprecated(o2) && !isDeprecated(o1)) {
-				return -1;
-			}
-			return o1.getName().compareTo(o2.getName());
-		}
-
-		private boolean isDeprecated(ItemMetadata item) {
+		private static boolean isDeprecated(ItemMetadata item) {
 			return item.getDeprecation() != null;
 		}
 
