@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,16 @@
 
 package org.springframework.boot.gradle.tasks.run;
 
-import java.lang.reflect.Method;
+import java.io.File;
+import java.util.Set;
 
 import org.gradle.api.file.SourceDirectorySet;
+import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
+import org.gradle.work.DisableCachingByDefault;
 
 /**
  * Custom {@link JavaExec} task for running a Spring Boot application.
@@ -30,30 +33,21 @@ import org.gradle.api.tasks.SourceSetOutput;
  * @author Andy Wilkinson
  * @since 2.0.0
  */
-public class BootRun extends JavaExec {
+@DisableCachingByDefault(because = "Application should always run")
+public abstract class BootRun extends JavaExec {
 
-	private boolean optimizedLaunch = true;
+	public BootRun() {
+		getOptimizedLaunch().convention(true);
+	}
 
 	/**
-	 * Returns {@code true} if the JVM's launch should be optimized, otherwise
-	 * {@code false}. Defaults to {@code true}.
+	 * Returns the property for whether the JVM's launch should be optimized. The property
+	 * defaults to {@code true}.
 	 * @return whether the JVM's launch should be optimized
-	 * @since 2.2.0
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isOptimizedLaunch() {
-		return this.optimizedLaunch;
-	}
-
-	/**
-	 * Sets whether the JVM's launch should be optimized. Defaults to {@code true}.
-	 * @param optimizedLaunch {@code true} if the JVM's launch should be optimised,
-	 * otherwise {@code false}
-	 * @since 2.2.0
-	 */
-	public void setOptimizedLaunch(boolean optimizedLaunch) {
-		this.optimizedLaunch = optimizedLaunch;
-	}
+	public abstract Property<Boolean> getOptimizedLaunch();
 
 	/**
 	 * Adds the {@link SourceDirectorySet#getSrcDirs() source directories} of the given
@@ -63,33 +57,22 @@ public class BootRun extends JavaExec {
 	 * @param sourceSet the source set
 	 */
 	public void sourceResources(SourceSet sourceSet) {
-		setClasspath(getProject().files(sourceSet.getResources().getSrcDirs(), getClasspath())
-				.filter((file) -> !file.equals(sourceSet.getOutput().getResourcesDir())));
+		File resourcesDir = sourceSet.getOutput().getResourcesDir();
+		Set<File> srcDirs = sourceSet.getResources().getSrcDirs();
+		setClasspath(getProject().files(srcDirs, getClasspath()).filter((file) -> !file.equals(resourcesDir)));
 	}
 
 	@Override
 	public void exec() {
-		if (this.optimizedLaunch) {
+		if (getOptimizedLaunch().get()) {
 			setJvmArgs(getJvmArgs());
-			if (!isJava13OrLater()) {
-				jvmArgs("-Xverify:none");
-			}
 			jvmArgs("-XX:TieredStopAtLevel=1");
 		}
 		if (System.console() != null) {
 			// Record that the console is available here for AnsiOutput to detect later
-			this.getEnvironment().put("spring.output.ansi.console-available", true);
+			getEnvironment().put("spring.output.ansi.console-available", true);
 		}
 		super.exec();
-	}
-
-	private boolean isJava13OrLater() {
-		for (Method method : String.class.getMethods()) {
-			if (method.getName().equals("stripIndent")) {
-				return true;
-			}
-		}
-		return false;
 	}
 
 }
