@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,11 +19,11 @@ package org.springframework.boot.context.properties.source;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
 import org.springframework.boot.context.properties.source.ConfigurationPropertyName.Form;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -41,31 +41,35 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameShouldNotBeNull() {
 		assertThatIllegalArgumentException().isThrownBy(() -> ConfigurationPropertyName.of(null))
-				.withMessageContaining("Name must not be null");
+			.withMessageContaining("Name must not be null");
 	}
 
 	@Test
 	void ofNameShouldNotStartWithDash() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("-foo")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("-foo"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameShouldNotStartWithDot() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of(".foo")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of(".foo"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameShouldNotEndWithDot() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("foo.")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("foo."))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameShouldNotContainUppercase() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("fOo")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("fOo"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
@@ -73,16 +77,16 @@ class ConfigurationPropertyNameTests {
 		String invalid = "_@$%*+=':;";
 		for (char c : invalid.toCharArray()) {
 			assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-					.isThrownBy(() -> ConfigurationPropertyName.of("foo" + c))
-					.satisfies((ex) -> assertThat(ex.getMessage()).contains("is not valid"));
+				.isThrownBy(() -> ConfigurationPropertyName.of("foo" + c))
+				.satisfies((ex) -> assertThat(ex.getMessage()).contains("is not valid"));
 		}
 	}
 
 	@Test
 	void ofNameWhenSimple() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("name");
-		assertThat(name.toString()).isEqualTo("name");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("name");
+		assertThat(name.getNumberOfElements()).isOne();
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("name");
 		assertThat(name.isIndexed(0)).isFalse();
 	}
@@ -90,8 +94,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenStartsWithNumber() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("1foo");
-		assertThat(name.toString()).isEqualTo("1foo");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("1foo");
+		assertThat(name.getNumberOfElements()).isOne();
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("1foo");
 		assertThat(name.isIndexed(0)).isFalse();
 	}
@@ -99,7 +103,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenRunOnAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[bar]");
-		assertThat(name.toString()).isEqualTo("foo[bar]");
+		assertThat(name).hasToString("foo[bar]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -109,7 +113,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDotOnAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar");
-		assertThat(name.toString()).isEqualTo("foo.bar");
+		assertThat(name).hasToString("foo.bar");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -119,7 +123,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDotAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.[bar]");
-		assertThat(name.toString()).isEqualTo("foo[bar]");
+		assertThat(name).hasToString("foo[bar]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -129,7 +133,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDoubleRunOnAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[bar]baz");
-		assertThat(name.toString()).isEqualTo("foo[bar].baz");
+		assertThat(name).hasToString("foo[bar].baz");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.getElement(2, Form.ORIGINAL)).isEqualTo("baz");
@@ -141,7 +145,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDoubleDotAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.[bar].baz");
-		assertThat(name.toString()).isEqualTo("foo[bar].baz");
+		assertThat(name).hasToString("foo[bar].baz");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.getElement(2, Form.ORIGINAL)).isEqualTo("baz");
@@ -153,25 +157,28 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenMissingCloseBracket() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("[bar")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("[bar"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWhenMissingOpenBracket() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("bar]")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("bar]"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWhenMultipleMismatchedBrackets() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("[a[[[b]ar]")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("[a[[[b]ar]"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWhenNestedBrackets() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[a[c][[b]ar]]");
-		assertThat(name.toString()).isEqualTo("foo[a[c][[b]ar]]");
+		assertThat(name).hasToString("foo[a[c][[b]ar]]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("a[c][[b]ar]");
 	}
@@ -179,13 +186,14 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWithWhitespaceInName() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("foo. bar")).withMessageContaining("is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("foo. bar"))
+			.withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWithWhitespaceInAssociativeElement() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[b a r]");
-		assertThat(name.toString()).isEqualTo("foo[b a r]");
+		assertThat(name).hasToString("foo[b a r]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("b a r");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -195,7 +203,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWithUppercaseInAssociativeElement() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[BAR]");
-		assertThat(name.toString()).isEqualTo("foo[BAR]");
+		assertThat(name).hasToString("foo[BAR]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("BAR");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -205,20 +213,32 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofWhenNameIsEmptyShouldReturnEmptyName() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("");
-		assertThat(name.toString()).isEqualTo("");
-		assertThat(name.append("foo").toString()).isEqualTo("foo");
+		assertThat(name.toString()).isEmpty();
+		assertThat(name.append("foo")).hasToString("foo");
+	}
+
+	@Test
+	void ofIfValidWhenNameIsValidReturnsName() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.ofIfValid("spring.bo-ot");
+		assertThat(name).hasToString("spring.bo-ot");
+	}
+
+	@Test
+	void ofIfValidWhenNameIsNotValidReturnsNull() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.ofIfValid("spring.bo!oot");
+		assertThat(name).isNull();
 	}
 
 	@Test
 	void adaptWhenNameIsNullShouldThrowException() {
 		assertThatIllegalArgumentException().isThrownBy(() -> ConfigurationPropertyName.adapt(null, '.'))
-				.withMessageContaining("Name must not be null");
+			.withMessageContaining("Name must not be null");
 	}
 
 	@Test
 	void adaptWhenElementValueProcessorIsNullShouldAdapt() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("foo", '.', null);
-		assertThat(name.toString()).isEqualTo("foo");
+		assertThat(name).hasToString("foo");
 	}
 
 	@Test
@@ -235,7 +255,7 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("f");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("br");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("br");
-		assertThat(name.toString()).isEqualTo("f.br");
+		assertThat(name).hasToString("f.br");
 	}
 
 	@Test
@@ -245,7 +265,7 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("f-_o");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("br");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("b_r");
-		assertThat(name.toString()).isEqualTo("f-o.br");
+		assertThat(name).hasToString("f-o.br");
 	}
 
 	@Test
@@ -255,32 +275,32 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("fOo");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("bar");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bAr");
-		assertThat(name.toString()).isEqualTo("foo.bar");
+		assertThat(name).hasToString("foo.bar");
 	}
 
 	@Test
 	void adaptShouldUseElementValueProcessor() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("FOO_THE-BAR", '_',
 				(c) -> c.toString().replace("-", ""));
-		assertThat(name.toString()).isEqualTo("foo.thebar");
+		assertThat(name).hasToString("foo.thebar");
 	}
 
 	@Test
 	void adaptShouldSupportIndexedElements() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("foo", '.');
-		assertThat(name.toString()).isEqualTo("foo");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("foo");
+		assertThat(name.getNumberOfElements()).isOne();
 		name = ConfigurationPropertyName.adapt("[foo]", '.');
-		assertThat(name.toString()).isEqualTo("[foo]");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("[foo]");
+		assertThat(name.getNumberOfElements()).isOne();
 		name = ConfigurationPropertyName.adapt("foo.bar", '.');
-		assertThat(name.toString()).isEqualTo("foo.bar");
+		assertThat(name).hasToString("foo.bar");
 		assertThat(name.getNumberOfElements()).isEqualTo(2);
 		name = ConfigurationPropertyName.adapt("foo[foo.bar]", '.');
-		assertThat(name.toString()).isEqualTo("foo[foo.bar]");
+		assertThat(name).hasToString("foo[foo.bar]");
 		assertThat(name.getNumberOfElements()).isEqualTo(2);
 		name = ConfigurationPropertyName.adapt("foo.[bar].baz", '.');
-		assertThat(name.toString()).isEqualTo("foo[bar].baz");
+		assertThat(name).hasToString("foo[bar].baz");
 		assertThat(name.getNumberOfElements()).isEqualTo(3);
 	}
 
@@ -321,8 +341,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void getLastElementWhenEmptyShouldReturnEmptyString() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.EMPTY;
-		assertThat(name.getLastElement(Form.ORIGINAL)).isEqualTo("");
-		assertThat(name.getLastElement(Form.UNIFORM)).isEqualTo("");
+		assertThat(name.getLastElement(Form.ORIGINAL)).isEmpty();
+		assertThat(name.getLastElement(Form.UNIFORM)).isEmpty();
 	}
 
 	@Test
@@ -374,8 +394,8 @@ class ConfigurationPropertyNameTests {
 
 	@Test
 	void getNumberOfElementsShouldReturnNumberOfElement() {
-		assertThat(ConfigurationPropertyName.of("").getNumberOfElements()).isEqualTo(0);
-		assertThat(ConfigurationPropertyName.of("x").getNumberOfElements()).isEqualTo(1);
+		assertThat(ConfigurationPropertyName.of("").getNumberOfElements()).isZero();
+		assertThat(ConfigurationPropertyName.of("x").getNumberOfElements()).isOne();
 		assertThat(ConfigurationPropertyName.of("x.y").getNumberOfElements()).isEqualTo(2);
 		assertThat(ConfigurationPropertyName.of("x[0].y").getNumberOfElements()).isEqualTo(3);
 	}
@@ -383,41 +403,74 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void appendWhenNotIndexedShouldAppendWithDot() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo");
-		assertThat(name.append("bar").toString()).isEqualTo("foo.bar");
+		assertThat(name.append("bar")).hasToString("foo.bar");
 	}
 
 	@Test
 	void appendWhenIndexedShouldAppendWithBrackets() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo").append("[bar]");
 		assertThat(name.isLastElementIndexed()).isTrue();
-		assertThat(name.toString()).isEqualTo("foo[bar]");
+		assertThat(name).hasToString("foo[bar]");
 	}
 
 	@Test
 	void appendWhenElementNameIsNotValidShouldThrowException() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("foo").append("-bar"))
-				.withMessageContaining("Configuration property name '-bar' is not valid");
+			.isThrownBy(() -> ConfigurationPropertyName.of("foo").append("-bar"))
+			.withMessageContaining("Configuration property name '-bar' is not valid");
 	}
 
 	@Test
 	void appendWhenElementNameMultiDotShouldAppend() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo").append("bar.baz");
-		assertThat(name.toString()).isEqualTo("foo.bar.baz");
+		assertThat(name).hasToString("foo.bar.baz");
 		assertThat(name.getNumberOfElements()).isEqualTo(3);
 	}
 
 	@Test
 	void appendWhenElementNameIsNullShouldReturnName() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo");
-		assertThat((Object) name.append(null)).isSameAs(name);
+		assertThat((Object) name.append((String) null)).isSameAs(name);
+	}
+
+	@Test
+	void appendConfigurationPropertyNameShouldReturnAppendedName() {
+		ConfigurationPropertyName n1 = ConfigurationPropertyName.of("spring.boot");
+		ConfigurationPropertyName n2 = ConfigurationPropertyName.of("tests.code");
+		assertThat(n1.append(n2)).hasToString("spring.boot.tests.code");
+	}
+
+	@Test
+	void appendConfigurationPropertyNameWhenNullShouldReturnName() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo");
+		assertThat((Object) name.append((ConfigurationPropertyName) null)).isSameAs(name);
+	}
+
+	@Test
+	void getParentShouldReturnParent() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("this.is.a.multipart.name");
+		ConfigurationPropertyName p1 = name.getParent();
+		ConfigurationPropertyName p2 = p1.getParent();
+		ConfigurationPropertyName p3 = p2.getParent();
+		ConfigurationPropertyName p4 = p3.getParent();
+		ConfigurationPropertyName p5 = p4.getParent();
+		assertThat(p1).hasToString("this.is.a.multipart");
+		assertThat(p2).hasToString("this.is.a");
+		assertThat(p3).hasToString("this.is");
+		assertThat(p4).hasToString("this");
+		assertThat(p5).isEqualTo(ConfigurationPropertyName.EMPTY);
+	}
+
+	@Test
+	void getParentWhenEmptyShouldReturnEmpty() {
+		assertThat(ConfigurationPropertyName.EMPTY.getParent()).isEqualTo(ConfigurationPropertyName.EMPTY);
 	}
 
 	@Test
 	void chopWhenLessThenSizeShouldReturnChopped() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
-		assertThat(name.chop(1).toString()).isEqualTo("foo");
-		assertThat(name.chop(2).toString()).isEqualTo("foo.bar");
+		assertThat(name.chop(1)).hasToString("foo");
+		assertThat(name.chop(2)).hasToString("foo.bar");
 	}
 
 	@Test
@@ -430,6 +483,37 @@ class ConfigurationPropertyNameTests {
 	void chopWhenEqualToSizeShouldReturnExisting() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
 		assertThat(name.chop(3)).isEqualTo(name);
+	}
+
+	@Test
+	void subNameWhenOffsetLessThanSizeShouldReturnSubName() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
+		assertThat(name.subName(1)).hasToString("bar.baz");
+		assertThat(name.subName(2)).hasToString("baz");
+	}
+
+	@Test
+	void subNameWhenOffsetZeroShouldReturnName() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
+		assertThat(name.subName(0)).isSameAs(name);
+	}
+
+	@Test
+	void subNameWhenOffsetEqualToSizeShouldReturnEmpty() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
+		assertThat(name.subName(3)).isSameAs(ConfigurationPropertyName.EMPTY);
+	}
+
+	@Test
+	void subNameWhenOffsetMoreThanSizeShouldReturnEmpty() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
+		assertThatExceptionOfType(IndexOutOfBoundsException.class).isThrownBy(() -> name.subName(4));
+	}
+
+	@Test
+	void subNameWhenOffsetNegativeShouldThrowException() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
+		assertThatExceptionOfType(IndexOutOfBoundsException.class).isThrownBy(() -> name.subName(-1));
 	}
 
 	@Test
@@ -504,28 +588,28 @@ class ConfigurationPropertyNameTests {
 		names.add(ConfigurationPropertyName.of("foo.baz"));
 		names.add(ConfigurationPropertyName.of("foo"));
 		Collections.sort(names);
-		assertThat(names.stream().map(ConfigurationPropertyName::toString).collect(Collectors.toList()))
-				.containsExactly("foo", "foo[2]", "foo[10]", "foo.bar", "foo.bard", "foo.baz");
+		assertThat(names.stream().map(ConfigurationPropertyName::toString).toList()).containsExactly("foo", "foo[2]",
+				"foo[10]", "foo.bar", "foo.bard", "foo.baz");
 	}
 
 	@Test
 	void compareDifferentLengthsShouldSortNames() {
-		ConfigurationPropertyName name = ConfigurationPropertyName.of("spring.resources.chain.strategy.content");
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("spring.web.resources.chain.strategy.content");
 		ConfigurationPropertyName other = ConfigurationPropertyName
-				.of("spring.resources.chain.strategy.content.enabled");
-		assertThat(name.compareTo(other)).isLessThan(0);
+			.of("spring.web.resources.chain.strategy.content.enabled");
+		assertThat(name).isLessThan(other);
 	}
 
 	@Test
 	void toStringShouldBeLowerCaseDashed() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("fOO.b_-a-r", '.');
-		assertThat(name.toString()).isEqualTo("foo.b-a-r");
+		assertThat(name).hasToString("foo.b-a-r");
 	}
 
 	@Test
 	void toStringFromOfShouldBeLowerCaseDashed() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar-baz");
-		assertThat(name.toString()).isEqualTo("foo.bar-baz");
+		assertThat(name).hasToString("foo.bar-baz");
 	}
 
 	@Test
@@ -545,17 +629,18 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName n13 = ConfigurationPropertyName.of("f-o-o[b-a-r--]");
 		ConfigurationPropertyName n14 = ConfigurationPropertyName.of("[1]");
 		ConfigurationPropertyName n15 = ConfigurationPropertyName.of("[-1]");
-		assertThat(n01.hashCode()).isEqualTo(n02.hashCode());
-		assertThat(n01.hashCode()).isEqualTo(n02.hashCode());
-		assertThat(n01.hashCode()).isEqualTo(n03.hashCode());
-		assertThat(n01.hashCode()).isEqualTo(n04.hashCode());
-		assertThat(n01.hashCode()).isEqualTo(n11.hashCode());
 		assertThat((Object) n01).isEqualTo(n01);
+		assertThat(n01).hasSameHashCodeAs(n01);
 		assertThat((Object) n01).isEqualTo(n02);
+		assertThat(n01).hasSameHashCodeAs(n02);
 		assertThat((Object) n01).isEqualTo(n03);
+		assertThat(n01).hasSameHashCodeAs(n03);
 		assertThat((Object) n01).isEqualTo(n04);
+		assertThat(n01).hasSameHashCodeAs(n04);
 		assertThat((Object) n11).isEqualTo(n03);
+		assertThat(n11).hasSameHashCodeAs(n03);
 		assertThat((Object) n03).isEqualTo(n11);
+		assertThat(n03).hasSameHashCodeAs(n11);
 		assertThat((Object) n01).isNotEqualTo(n05);
 		assertThat((Object) n01).isNotEqualTo(n06);
 		assertThat((Object) n07).isNotEqualTo(n08);
@@ -563,6 +648,15 @@ class ConfigurationPropertyNameTests {
 		assertThat((Object) n10).isNotEqualTo(n09);
 		assertThat((Object) n12).isNotEqualTo(n13);
 		assertThat((Object) n14).isNotEqualTo(n15);
+	}
+
+	@Test
+	void equalsAndHashCodeAfterOperations() {
+		ConfigurationPropertyName n1 = ConfigurationPropertyName.of("nested");
+		ConfigurationPropertyName n2 = ConfigurationPropertyName.EMPTY.append("nested");
+		ConfigurationPropertyName n3 = ConfigurationPropertyName.of("nested.value").getParent();
+		assertThat(n1).hasSameHashCodeAs(n2).hasSameHashCodeAs(n3);
+		assertThat(n1).isEqualTo(n2).isEqualTo(n3);
 	}
 
 	@Test
@@ -599,6 +693,15 @@ class ConfigurationPropertyNameTests {
 	}
 
 	@Test
+	void equalsWhenAdaptedNameMatchesDueToRemovalOfTrailingCharacters() {
+		// gh-30317
+		ConfigurationPropertyName name1 = ConfigurationPropertyName.of("example.demo");
+		ConfigurationPropertyName name2 = ConfigurationPropertyName.adapt("example.demo$$", '.');
+		assertThat(name1).isEqualTo(name2);
+		assertThat(name2).isEqualTo(name1);
+	}
+
+	@Test
 	void isValidWhenValidShouldReturnTrue() {
 		assertThat(ConfigurationPropertyName.isValid("")).isTrue();
 		assertThat(ConfigurationPropertyName.isValid("foo")).isTrue();
@@ -619,12 +722,20 @@ class ConfigurationPropertyNameTests {
 	}
 
 	@Test
-	void hasIndexedElementWhenHasIndexedElementReturnsTrue() throws Exception {
+	void hashCodeIsStored() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("hash.code");
+		int hashCode = name.hashCode();
+		// hasFieldOrPropertyWithValue would look up for hashCode()
+		assertThat(ReflectionTestUtils.getField(name, "hashCode")).isEqualTo(hashCode);
+	}
+
+	@Test
+	void hasIndexedElementWhenHasIndexedElementReturnsTrue() {
 		assertThat(ConfigurationPropertyName.of("foo[bar]").hasIndexedElement()).isTrue();
 	}
 
 	@Test
-	void hasIndexedElementWhenHasNoIndexedElementReturnsFalse() throws Exception {
+	void hasIndexedElementWhenHasNoIndexedElementReturnsFalse() {
 		assertThat(ConfigurationPropertyName.of("foo.bar").hasIndexedElement()).isFalse();
 	}
 
